Fixed rating alignment

--- a/social-proof-section-master/style.css
+++ b/social-proof-section-master/style.css
@@ -50,7 +50,22 @@ section{
   display: flex;
   position: absolute;
   top: 100px;
-  right: 100px;
+  right: 160px;
+  align-items: center;
+  width: 340px;
+  background-color: hsl(290, 28%, 85%);
+  height: 50px;
+  padding: 5px;
+  border-radius: 10px;
+  font-family: 'Spartan', sans-serif;
+  font-size: 12px;
+  color: hsl(279, 29%, 50%);
+ }
+.five-star-rating-best-tech{ 
+  display: flex;
+  position: absolute;
+  top: 160px;
+  right: 120px;
   align-items: center;
   width: 340px;
   background-color: hsl(290, 28%, 85%);
